--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+.todo {
+
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+
+}
 .container1 {
    background-image: url("/img/fond1.gif");
    background-size: cover;
    font-family: Arial, sans-serif; 
    width: 600px;
    height: 300px;
-   margin: 100px;
+   margin: 20px 80px 80px 80px;
    border-radius: 60px;
    border-style: solid; 
    border-color: #24f30d;
@@ -42,7 +49,7 @@
 }
 
 .contenido-header .texto {
-    margin: 90px;
+    margin: 80px 80px 20px 80px;
     background: #1eff00;
     width: 805px;
     height: 20vh;
@@ -57,5 +64,4 @@
     border-color: #146b08;
     border-width: 10px;
     
-
 }
