--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
    font-family: Arial, sans-serif; 
    width: 600px;
    height: 300px;
-   margin: 20px 80px 80px 80px;
+   margin: 25px 80px 25px 80px;
    border-radius: 60px;
    border-style: solid; 
    border-color: #24f30d;
@@ -49,8 +49,8 @@
 }
 
 .contenido-header .texto {
-    margin: 80px 80px 20px 80px;
-    background: #1eff00;
+    margin: 80px 80px 0px 80px;
+    background: #146b08;
     width: 805px;
     height: 20vh;
     font-size: 70px;
@@ -58,10 +58,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #146b08;
+    color: #1eff00;
     border-radius: 30px;
     border-style: solid;
-    border-color: #146b08;
+    border-color: #1eff00;
     border-width: 10px;
     
 }
