--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 }
 .container1 {
-   background-image: url("/img/fond1.gif");
+   background-image: url("../img/fond1.gif");
    background-size: cover;
    font-family: Arial, sans-serif; 
    width: 600px;
