--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,17 @@
    background-image: url("../img/fond1.gif");
    background-size: cover;
    font-family: Arial, sans-serif; 
-   width: 600px;
-   height: 300px;
+   width: 550px;
+   height: 450px;
    margin: 25px 80px 25px 80px;
    border-radius: 60px;
    border-style: solid; 
    border-color: #24f30d;
-   padding: 90px;
+   padding: 30px;
    text-align: center;
    border-width: 20px;
    display: flex;
+   flex-direction: column;
    align-items: center;
    
 }
@@ -26,6 +27,7 @@
 .clock {
    font-size: 70px;
    color: white;
+   
 }
 
 .alarm {
@@ -35,25 +37,25 @@
 }
 
 #alarmTime{
-    margin: 30px;
+    margin: 10px;
     padding: 20px;
     border-radius: 10px;
     font-size: larger;
 }
 
 .alarm button {
-    margin: 30px;
-    padding: 20px;
+    margin: 5px;
+    padding: 5px;
     border-radius: 10px;
     font-size: larger;
 }
 
 .contenido-header .texto {
-    margin: 80px 80px 0px 80px;
+    margin: 20px 80px 0px 80px;
     background: #146b08;
-    width: 805px;
+    width: 640px;
     height: 20vh;
-    font-size: 70px;
+    font-size: 55px;
     font-style: normal;
     display: flex;
     align-items: center;
