--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
     margin: 10px;
     padding: 20px;
     border-radius: 10px;
+    width: 430px;
     font-size: larger;
 }
 
@@ -47,7 +48,7 @@
     margin: 5px;
     padding: 5px;
     border-radius: 10px;
-    font-size: larger;
+    font-size: 25px;
 }
 
 .contenido-header .texto {
